--- a/code1.html
+++ b/code1.html
@@ -1,10 +1,17 @@
  <!DOCTYPE html>
 <html>
 <head>
-<title>My first Github website</title>
+<title>Creating HTML form </title>
 </head>
 <body>
-<h1>Welcome to my website</h1>
-<p>This site is hosted</p>
+<FORM>
+ FIRST Name:
+ <INPUT type="text" name="firstname">
+ <BR>
+ Last Name:
+ <INPUT type="text" name="lastname">
+ <BR>
+ <INPUT type="submit" value="SUBMIT">
+</FORM>
 </body>
 </html>
