--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
  <!DOCTYPE html>
-<html>
-<head>
-<title>Creating HTML form </title>
-</head>
-<body>
+<HTML>
+<HEAD>
+<TITLE>Creating HTML form </TITLE>
+</HEAD>
+<BODY>
 <FORM>
  FIRST Name:
  <INPUT type="text" name="firstname">
@@ -13,5 +13,5 @@
  <BR>
  <INPUT type="submit" value="SUBMIT">
 </FORM>
-</body>
-</html>
+</BODY>
+</HTML>
