Change label from 'Last Name' to 'LAST Name'

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  FIRST Name:
  <INPUT type="text" name="firstname">
  <BR>
- Last Name:
+ LAST Name:
  <INPUT type="text" name="lastname">
  <BR>
  <INPUT type="submit" value="SUBMIT">
