--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 </HEAD>
 <BODY>
 <FORM>
- FIRST Name:
+ First Name:
  <INPUT type="text" name="firstname">
  <BR>
- LAST Name:
+ Last Name:
  <INPUT type="text" name="lastname">
  <BR>
  <INPUT type="submit" value="SUBMIT">
